# UMBRA

./: .gitignore  ARCHITECTURE.md  BRAND.md  CHANGELOG.md  README.md  index.html  package-lock.json  package.json  playwright.config.ts  steps_to_completion.md  tailwind.config.ts  test-umbra.bat  tsconfig.json  vite.config.ts
.claude/: HANDOVER-2026-03-17-14-38.md  launch.json  settings.local.json
docs/: agent-runtime-evaluation-2026-03-26.md  agent-setup-guide-2026-03-25.md  agent-workbench-roadmap-2026-03-26.md  agent-workbench-spec-2026-03-25.md  ai-provider-landscape-2026-03-22.md  backlog-audit-launcher-repo-actions-pass-2026-03-22.md  contrast-cron-launcher-collapse-pass-2026-03-22.md  dashboard-assignment-broker-pass-2026-03-20.md  dashboard-clarity-pass-2026-03-20.md  dashboard-design-pass-2026-03-20.md  dashboard-plugins-cron-architecture-2026-03-20.md  dashboard-pm-inspired-redesign-2026-03-20.md  dashboard-shell-pixel-pass-2026-03-20.md  dashboard-taskboard-pass-2026-03-20.md  end-user-install-guide-2026-03-22.md  favicon-umbra.md  global-agents-gordon-pass-2026-03-24.md  qa-preview-2026-03-20.md  (+37 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: credentials.rs  errors.rs  lib.rs  main.rs  state.rs  types.rs  uap.rs
src-tauri/src/commands/: agents.rs  config.rs  cron.rs  github.rs  integrations.rs  launcher.rs  mod.rs  notes.rs  ops_room.rs  plugins.rs  updates.rs  workbench.rs
src-tauri/src/cron/: mod.rs
src-tauri/src/workbench/: adapters.rs  mod.rs  runner.rs  store.rs
(+82 files in other folders)
